# reasonance

./: .gitignore  CHANGELOG.md  LICENSE  README.md  elegant-dark.json  package-lock.json  package.json  playwright-tauri.config.ts  playwright.config.ts  reasonance.desktop  sakura-light.json  vite.config.ts  vitest.config.ts
assets/: generate-logo.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/benches/: baseline.rs  event_bus_bench.rs
src-tauri/benchmarks/: baselines.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/normalizers/: claude.toml  codex.toml  gemini.toml  kimi.toml  qwen.toml
src-tauri/normalizers/fixtures/claude/: result_metrics.expected.json  result_metrics.jsonl
src-tauri/normalizers/fixtures/codex/: basic_text.expected.json  basic_text.jsonl  error.expected.json  error.jsonl  reasoning.expected.json  reasoning.jsonl  tool_use.expected.json  tool_use.jsonl
src-tauri/normalizers/fixtures/gemini/: basic_text.jsonl  error.expected.json  error.jsonl  tool_use.expected.json  tool_use.jsonl
src-tauri/src/: agent_comms.rs  agent_event.rs  agent_memory.rs  agent_memory_v2.rs  agent_runtime.rs  app_state_store.rs  capability.rs  circuit_breaker.rs  cli_updater.rs  config.rs  discovery.rs  error.rs  event_bus.rs  event_bus_v2.rs  file_ops.rs  fs_watcher.rs  lib.rs  logic_eval.rs  main.rs  model_slots.rs  node_registry.rs  normalizer_health.rs  normalizer_version.rs  perf.rs  permission_engine.rs  policy_file.rs  project_manager.rs  pty_manager.rs  resource_lock.rs  self_heal.rs  shadow_store.rs  signal.rs  theme_manager.rs  theme_watcher.rs  tracked_map.rs  workflow_engine.rs  workflow_store.rs  workspace_trust.rs
src-tauri/src/analytics/: collector.rs  mod.rs  store.rs
src-tauri/src/commands/: agent.rs  agent_comms.rs  analytics.rs  app_state.rs  batch.rs  capability.rs  config.rs  discovery.rs  engine.rs  file_ops.rs  fs.rs  llm.rs  memory.rs  mod.rs  permission.rs  provider.rs  pty.rs  self_heal.rs  session.rs  settings.rs  shadow.rs  system.rs  transport.rs  workflow.rs  workspace_trust.rs
src-tauri/src/normalizer/: content_parser.rs  fixture_tests.rs  integration_tests.rs  mod.rs  pipeline.rs  rules_engine.rs
src-tauri/src/settings/: defaults.rs  mod.rs
src-tauri/src/storage/: in_memory.rs  json_file.rs  mod.rs
src-tauri/src/subscribers/: analytics.rs  history.rs  mod.rs  session_writer.rs
src-tauri/src/transport/: chat_flow_tests.rs  direct_api.rs  event_bus.rs  integration_tests.rs  mod.rs  persistent.rs  request.rs  retry.rs  session.rs  session_handle.rs  session_integration_tests.rs  session_manager.rs  session_store.rs  stream_reader.rs
(+371 files in other folders)
