[package]
name = "forge-ide"
version = "0.1.0"
description = "A lightweight desktop IDE for vibecoders"
authors = ["you"]
edition = "2021"

[lib]
name = "forge_ide_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"
ignore = "0.4"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
