[package]
name = "reasonance"
version = "0.1.0"
description = "A lightweight desktop IDE for vibecoders"
authors = ["you"]
edition = "2021"

[lib]
name = "reasonance_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"
ignore = "0.4"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
notify = "6"
toml = "0.8"
dirs = "5"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
chrono = { version = "0.4", features = ["serde"] }
