[package]
name = "reasonance"
version = "0.12.0"
description = "A lightweight desktop IDE for vibecoders"
authors = ["you"]
edition = "2021"

[lib]
name = "reasonance_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"
ignore = "0.4"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
notify = "8"
toml = "0.8"
dirs = "5"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process", "io-util"] }
chrono = { version = "0.4", features = ["serde"] }
which = "8.0.2"
sha2 = "0.10.9"

[dev-dependencies]
tempfile = "3"
